Patch from John Tseng, fixing bug 127859 (Dialog box for editing or deleting appointment does not catch "Yes"/No).

BUG:127859


svn path=/branches/KDE/3.5/kdepim/; revision=548388